[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://env/Environment.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/DAE format/wallFortified.dae" type="PackedScene" id=3]
[ext_resource path="res://NPC/NPC.tscn" type="PackedScene" id=4]
[ext_resource path="res://Dialogue.gd" type="Script" id=5]
[ext_resource path="res://env/wallPaint_gate.tscn" type="PackedScene" id=6]
[ext_resource path="res://NPC/Guard.tscn" type="PackedScene" id=7]
[ext_resource path="res://env/blaster.tscn" type="PackedScene" id=8]

[sub_resource type="SphereShape" id=3]
radius = 4.58297

[sub_resource type="BoxShape" id=4]

[node name="Game" type="Spatial"]

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.220855, -7.50317 )
collision_layer = 9
collision_mask = 9

[node name="Pivot" type="Position3D" parent="Player"]

[node name="Camera" type="Camera" parent="Player/Pivot"]
transform = Transform( -1, 5.61943e-08, -6.69697e-08, 0, 0.766044, 0.642788, 8.74228e-08, 0.642788, -0.766044, 0.004, 12, -10 )

[node name="evn_container" type="Spatial" parent="."]

[node name="Environment" parent="evn_container" instance=ExtResource( 2 )]

[node name="Environment2" parent="evn_container" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 50 )

[node name="wallFortified" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, -3.35097, 44.3924 )

[node name="wallFortified2" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 10, -3.35097, 27.8733 )

[node name="wallFortified3" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 20, -3.35097, 27.8733 )

[node name="wallFortified9" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, -10, -3.35097, 27.8733 )

[node name="wallFortified10" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, -20, -3.35097, 27.8733 )

[node name="wallFortified16" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, -3.35097, -28.2138 )

[node name="wallFortified17" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 10, -3.35097, -28.2138 )

[node name="wallFortified18" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 20, -3.35097, -28.2138 )

[node name="wallFortified19" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, -10, -3.35097, -28.2138 )

[node name="wallFortified20" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, -20, -3.35097, -28.2138 )

[node name="wallFortified4" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 0.153409, 0, 9.99882, 0, 10, 0, -9.99882, 0, 0.153409, 28.7593, -3.35097, 1.13107 )

[node name="wallFortified5" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 0.153409, 0, 9.99882, 0, 10, 0, -9.99882, 0, 0.153409, 28.7593, -3.35097, -8.86775 )

[node name="wallFortified6" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 0.153409, 0, 9.99882, 0, 10, 0, -9.99882, 0, 0.153409, 28.7593, -3.35097, -18.8666 )

[node name="wallFortified11" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 0.153409, 0, 9.99882, 0, 10, 0, -9.99882, 0, 0.153409, 28.7593, -3.35097, 11.1299 )

[node name="wallFortified12" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 0.153409, 0, 9.99882, 0, 10, 0, -9.99882, 0, 0.153409, 28.7593, -3.35097, 21.1287 )

[node name="wallFortified7" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 0.153409, 0, 9.99882, 0, 10, 0, -9.99882, 0, 0.153409, -28.4496, -3.35097, 1.13107 )

[node name="wallFortified8" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 0.153409, 0, 9.99882, 0, 10, 0, -9.99882, 0, 0.153409, -28.4496, -3.35097, -8.86775 )

[node name="wallFortified13" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 0.153409, 0, 9.99882, 0, 10, 0, -9.99882, 0, 0.153409, -28.4496, -3.35097, -18.8666 )

[node name="wallFortified14" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 0.153409, 0, 9.99882, 0, 10, 0, -9.99882, 0, 0.153409, -28.4496, -3.35097, 11.1299 )

[node name="wallFortified15" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 0.153409, 0, 9.99882, 0, 10, 0, -9.99882, 0, 0.153409, -28.4496, -3.35097, 21.1287 )

[node name="wallFortified21" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 6.68246, 44.3924 )
__meta__ = {
"_edit_group_": true
}

[node name="wallFortified22" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 10, 6.68246, 27.8733 )
__meta__ = {
"_edit_group_": true
}

[node name="wallFortified23" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 20, 6.68246, 27.8733 )
__meta__ = {
"_edit_group_": true
}

[node name="wallFortified24" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, -10, 6.68246, 27.8733 )
__meta__ = {
"_edit_group_": true
}

[node name="wallFortified25" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, -20, 6.68246, 27.8733 )
__meta__ = {
"_edit_group_": true
}

[node name="wallFortified26" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 6.68246, -28.2138 )
__meta__ = {
"_edit_group_": true
}

[node name="wallFortified27" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 10, 6.68246, -28.2138 )
__meta__ = {
"_edit_group_": true
}

[node name="wallFortified28" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 20, 6.68246, -28.2138 )
__meta__ = {
"_edit_group_": true
}

[node name="wallFortified29" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, -10, 6.68246, -28.2138 )
__meta__ = {
"_edit_group_": true
}

[node name="wallFortified30" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, -20, 6.68246, -28.2138 )
__meta__ = {
"_edit_group_": true
}

[node name="wallFortified31" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 0.153409, 0, 9.99882, 0, 10, 0, -9.99882, 0, 0.153409, 28.7593, 6.68246, 1.13107 )
__meta__ = {
"_edit_group_": true
}

[node name="wallFortified32" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 0.153409, 0, 9.99882, 0, 10, 0, -9.99882, 0, 0.153409, 28.7593, 6.68246, -8.86775 )
__meta__ = {
"_edit_group_": true
}

[node name="wallFortified33" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 0.153409, 0, 9.99882, 0, 10, 0, -9.99882, 0, 0.153409, 28.7593, 6.68246, -18.8666 )
__meta__ = {
"_edit_group_": true
}

[node name="wallFortified34" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 0.153409, 0, 9.99882, 0, 10, 0, -9.99882, 0, 0.153409, 28.7593, 6.68246, 11.1299 )
__meta__ = {
"_edit_group_": true
}

[node name="wallFortified35" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 0.153409, 0, 9.99882, 0, 10, 0, -9.99882, 0, 0.153409, 28.7593, 6.68246, 21.1287 )
__meta__ = {
"_edit_group_": true
}

[node name="wallFortified36" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 0.153409, 0, 9.99882, 0, 10, 0, -9.99882, 0, 0.153409, -28.4496, 6.68246, 1.13107 )
__meta__ = {
"_edit_group_": true
}

[node name="wallFortified37" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 0.153409, 0, 9.99882, 0, 10, 0, -9.99882, 0, 0.153409, -28.4496, 6.68246, -8.86775 )
__meta__ = {
"_edit_group_": true
}

[node name="wallFortified38" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 0.153409, 0, 9.99882, 0, 10, 0, -9.99882, 0, 0.153409, -28.4496, 6.68246, -18.8666 )
__meta__ = {
"_edit_group_": true
}

[node name="wallFortified39" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 0.153409, 0, 9.99882, 0, 10, 0, -9.99882, 0, 0.153409, -28.4496, 6.68246, 11.1299 )
__meta__ = {
"_edit_group_": true
}

[node name="wallFortified40" parent="evn_container" instance=ExtResource( 3 )]
transform = Transform( 0.153409, 0, 9.99882, 0, 10, 0, -9.99882, 0, 0.153409, -28.4496, 6.68246, 21.1287 )
__meta__ = {
"_edit_group_": true
}

[node name="wallPaint_gate" parent="evn_container" instance=ExtResource( 6 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, -0.119511, 0.05, 27.3443 )

[node name="wallPaint_gate2" parent="evn_container" instance=ExtResource( 6 )]
transform = Transform( 9.5, 0, 0, 0, 9.5, 0, 0, 0, 9.5, -0.119511, 0.05, 31.2763 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.363159, 3.93089, 34.5369 )
light_color = Color( 1, 0, 0, 1 )
light_energy = 5.0
light_indirect_energy = 16.0
omni_range = 16.2301

[node name="NPC" parent="." instance=ExtResource( 4 )]
transform = Transform( -0.999706, 0, 0.02424, 0, 1, 0, -0.02424, 0, -0.999706, 0, 0, -3.60218 )
collision_layer = 8
collision_mask = 8

[node name="Area" type="Area" parent="NPC"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape" type="CollisionShape" parent="NPC/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
shape = SubResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Dialogue" type="Control" parent="UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -300.0
script = ExtResource( 5 )

[node name="background" type="ColorRect" parent="UI/Dialogue"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )

[node name="Text" type="RichTextLabel" parent="UI/Dialogue"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
bbcode_enabled = true
bbcode_text = "Hello"
text = "Hello"

[node name="Option1" type="Button" parent="UI/Dialogue"]
anchor_top = 0.2
anchor_bottom = 0.2
margin_left = 15.0
margin_right = 35.0
margin_bottom = 20.9
text = "s"

[node name="Option2" type="Button" parent="UI/Dialogue"]
anchor_top = 0.3
anchor_bottom = 0.3
margin_left = 15.0
margin_right = 35.0
margin_bottom = 20.9
text = "hey"

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 36.3362, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.81521, 23.8534 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 4 )

[node name="StaticBody4" type="StaticBody" parent="."]
transform = Transform( 36.3362, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.81521, -24.3564 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody4"]
shape = SubResource( 4 )

[node name="StaticBody2" type="StaticBody" parent="."]
transform = Transform( -1.58831e-06, 0, 1, 0, 1, 0, -36.3362, 0, -4.37114e-08, -24.4227, 2.06805, 2.51943 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody2"]
shape = SubResource( 4 )

[node name="StaticBody3" type="StaticBody" parent="."]
transform = Transform( -1.58831e-06, 0, 1, 0, 1, 0, -36.3362, 0, -4.37114e-08, 24.8087, 2.06805, 2.51943 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody3"]
shape = SubResource( 4 )

[node name="Guard" parent="." instance=ExtResource( 7 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 21.0692 )

[node name="Area2" type="Area" parent="Guard"]
transform = Transform( 0.999706, 0, -0.0242401, 0, 1, 0, 0.0242401, 0, 0.999706, 0, 0, 0 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape" type="CollisionShape" parent="Guard/Area2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
shape = SubResource( 3 )

[node name="Spatial" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.8564, 0.566709, -14.6262 )

[connection signal="body_entered" from="NPC/Area" to="NPC" method="_on_Area_body_entered"]
[connection signal="body_exited" from="NPC/Area" to="NPC" method="_on_Area_body_exited"]
[connection signal="pressed" from="UI/Dialogue/Option1" to="UI/Dialogue" method="_on_Option1_pressed"]
[connection signal="pressed" from="UI/Dialogue/Option2" to="UI/Dialogue" method="_on_Option2_pressed"]
[connection signal="body_entered" from="Guard/Area2" to="Guard" method="_on_Area2_body_entered"]
[connection signal="body_exited" from="Guard/Area2" to="Guard" method="_on_Area2_body_exited"]
